2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: Regenerate.
	* etc/poke-gdb.scm: Remove file.
	* doc/pokeint.texi (Using GDB extensions): Remove section.

2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/btf-ext.pk (BTF_Ext_Header): Improve constraint for
	`magic' so it handles endianness better.

2024-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (struct pkl_type): Remove unused field `name'
	from the `fun' struct.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt): There is no
	more need to mark compound statement as frameless.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (struct pkl_gen_payload): Remove pasm2 and
	cur_pasm2 fields.
	(PKL_GEN_ASM2): Remove.
	(PKL_GEN_PUSH_ASM2): Likewise.
	(PKL_GEN_POP_ASM2): Likewise.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-help.pk: Add missing "dispatch" in synopsis for .vm.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (dup-wap-to-dup): New rewrite.
	(swap-tuck-to-over): Likewise.

2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_type_field): Fix
	memory leak.

2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/set-oacutoff-2.pk: Escape dots in regexps.
	* testsuite/poke.pkl/printf-25.pk: Likewise.
	* testsuite/poke.pkl/format-28.pk: Likewise.
	* testsuite/poke.pkl/format-20.pk: Likewise.
	* testsuite/poke.pkl/format-19.pk: Likewise.
	* testsuite/poke.cmd/set-oindent.pk: Likewise.
	* testsuite/poke.cmd/set-odepth-1.pk: Likewise.

2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Enable pretty-printing, tree output
	mode and pager by default if no quiet mode.
	* doc/poke.texi (Simple Init File): Update accordingly.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-alloc.c (pvm_alloc_gc): Define.
	* libpoke/pkl-insn.def (PKL_INSN_GC): Define.