@@ -25,7 +25,6 @@
 #include <string.h>
 #include <stdint.h>
 #include <assert.h>
-#include "xalloc.h"
 #include "intprops.h"
 
 #include "pk-utils.h"
