@@ -36,7 +36,6 @@
 #include <config.h>
 #include <stdlib.h>
 #include <stdio.h>
-#include <xalloc.h>
 #include <assert.h>
 #include <string.h>
 #include <gettext.h>
